# exjobb

./: .env_example  .gitignore  .prettierrc  README.md  copy.js  exjobb.code-workspace  nodemon.json  package-lock.json  package.json  sensorData.json  tsconfig.base.json  tsconfig.json
data/: hereRoute.json  here_olr.json  tomtom.json
data/flows/: anyVehicle.csv  car.csv  carWithTrailer.csv  lorry.csv  trailer.csv
data/flows/2024-02-25/: 1708862268.json  1708862569.json  1708862869.json  1708863170.json  1708863470.json  1708863771.json  1708864072.json  1708864372.json  (+83 more)
processing/: Cargo.toml  index.html
processing/queries/: query1.json  query1km.json  query2.json  query2km.json  query3.json  query4.json  query4km.json  query5.json  query8km.json
processing/simulations/: sim1.json  sim2.json
processing/src/: args.rs  custom_bfs.rs  graph.rs  main.rs  math.rs  output.rs  parse.rs  progress.rs  travel_time.rs  util.rs  visitor.rs
processing/src/gpkg/: mod.rs  model.rs
processing/src/modes/: disjoint.rs  draw_disjoint.rs  draw_distance.rs  draw_reachable.rs  draw_road.rs  find_gaps.rs  live_route.rs  mod.rs  shortest_path.rs  test_period_division.rs
processing/src/modes/aggregate/: mod.rs  model.rs
processing/src/modes/inspect/: mod.rs
processing/src/modes/inspect/coloring/: edge.rs  mod.rs  node.rs
processing/src/modes/simulate/: mod.rs
processing/src/mongo/: model.rs
processing/src/mongo/client/: async_client.rs  mod.rs
processing/src/processing/: mod.rs
processing/src/processing/collapse/: forward_only.rs  mod.rs  naive.rs
src/: compareRoutes.ts  compareRoutesResults.ts  db.ts  geo-nearby.d.ts  importtodb.ts  index.ts  migrate.ts  parse.ts  server.ts  test.ts  utils.ts
src/collect/: generateStatistics.ts  routes.ts  trafikverketflow.ts
src/lib/: polyline.js  types.ts  utils.ts
src/model/: routeModel.ts  trafikverketFlowModel.ts
src/public/: consts.ts  graph.ts  index.html  master.css  mode.ts  roadGeometry.ts  script.ts
src/scrape/: generateStatistics.ts  routes.ts  trafikverketflow.ts
src/sim/: graph.ts
(+153 files in other folders)
