[package]
name = "processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.28.0"
imageproc = "0.24.0"
petgraph = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
svg = "0.16.0"
