[package]
name = "processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.6.0", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
fixedbitset = "0.4.2"
geo = "0.28.0"
human_bytes = "0.4.3"
imageproc = "0.24.0"
kdtree = "0.7.0"
longitude = "0.2.1"
num-traits = "0.2.18"
petgraph = { version = "0.6.4", features = ["serde-1"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
svg = "0.16.0"
