[package]
name = "processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.6.0", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colorgrad = { version = "0.6.2", features = ["named-colors"] }
console = "0.15.8"
csv = "1.3.0"
fixedbitset = "0.4.2"
geo = "0.28.0"
geozero = { version = "0.12.0", features = ["with-gpkg", "with-postgis-sqlx"] }
human_bytes = "0.4.3"
imageproc = "0.24.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
kdtree = "0.7.0"
log = "0.4.21"
longitude = "0.2.1"
num-traits = "0.2.18"
petgraph = { version = "0.6.4", features = ["serde-1"] }
phf = "0.11.2"
proj4rs = "0.1.2"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simple_logger = "4.3.3"
smol = "2.0.0"
sqlx = { version = "0.7.4", features = ["runtime-async-std"] }
svg = "0.16.0"
